btw and styling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     }
   </style>
   <body>
-    <h1>btw</h1>
+    <h1 style="color:white; font-family:georgia; font-size:50px;">btw</h1>
   </body>
 </html>
